objects/TW1_Inadimplencia__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Aprovacao_Diretoria_Financeira_Extra__c</fullName>
        <label>Aprovação Diretoria Financeira</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aprovacao_Diretoria_Financeira__c</fullName>
        <label>Aprovação Diretoria Financeira</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aprovacao_Gerencia_Financeira__c</fullName>
        <label>Aprovação da Gerência Financeira</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Aprovacao_Gerencia_Juridica__c</fullName>
        <label>Aprovação Gerência Jurídica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Celular__c</fullName>
        <label>Celular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Principal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inadimplências</relationshipLabel>
        <relationshipName>TW1_Inadimplencias_Conta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Empreendimento_UAU__c</fullName>
        <formula>TW1_Unidade__r.TW1_Codigo_Empreendimento_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Empreendimento UAU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Empresa_UAU__c</fullName>
        <formula>TW1_Unidade__r.TW1_Codigo_Empresa_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Empresa UAU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Obra_UAU__c</fullName>
        <formula>TW1_Unidade__r.TW1_Codigo_Obra_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Obra UAU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Contato_Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contato Principal</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Inadimplências</relationshipLabel>
        <relationshipName>Inadimplencia_Contato</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Aprovacao_Dir_Financeira_Extra__c</fullName>
        <label>Data Aprovação Diretoria Financeira</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Aprovacao_Diretoria_Financeira__c</fullName>
        <label>Data Aprovação Diretoria Financeira</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Aprovacao_Gerencia_Financeira__c</fullName>
        <label>Data Aprovação Gerência Financeira</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Aprovacao_Gerencia_Juridica__c</fullName>
        <label>Data Aprovação Gerência Jurídica</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Conclusao__c</fullName>
        <label>Data Conclusão</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Hora_Vazia__c</fullName>
        <description>Campo criado somente para auxilio de fórmula, não usá-lo para outro objetivo.</description>
        <label>Data/Hora Vazia</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Postergacao__c</fullName>
        <label>Data Postergação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Vencimento_Parcela__c</fullName>
        <label>Data Vencimento Parcela</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Dias_Totais_Inadimplencia_Aberta__c</fullName>
        <formula>IF(ISPICKVAL( TW1_Fase__c , &quot;Concluída&quot;) ,   TW1_Data_Conclusao__c  -  CreatedDate  , NOW()- CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias Totais Inadimplência Aberta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Dias_na_Fase_Atual__c</fullName>
        <formula>IF(ISPICKVAL( TW1_Fase__c, &quot;Concluída&quot;), TW1_Numero_Vazio__c , NOW()- TW1_Inicio_Fase_Atual__c)</formula>
        <label>Dias na Fase Atual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_E_mail_Alternativo__c</fullName>
        <label>E-mail Alternativo</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TW1_E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TW1_Etapa__c</fullName>
        <label>Etapa</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nova</fullName>
                    <default>true</default>
                    <label>Nova</label>
                </value>
                <value>
                    <fullName>Analisando Transferência de Responsável</fullName>
                </value>
                <value>
                    <fullName>Buscando Contato com Cliente</fullName>
                </value>
                <value>
                    <fullName>Notificando Jucialmente</fullName>
                </value>
                <value>
                    <fullName>Realizando Negociação</fullName>
                </value>
                <value>
                    <fullName>Aguardando Aprovação da Diretoria</fullName>
                </value>
                <value>
                    <fullName>Registrando Trativa</fullName>
                </value>
                <value>
                    <fullName>Aguardando Pagamento</fullName>
                </value>
                <value>
                    <fullName>Analisando Negociação</fullName>
                </value>
                <value>
                    <fullName>Gerando Boleto</fullName>
                </value>
                <value>
                    <fullName>Negociação Definida/Aguardando Conclusão da Inadimplência</fullName>
                </value>
                <value>
                    <fullName>Analisando Inadimplência</fullName>
                </value>
                <value>
                    <fullName>Aguardando Data Postergação</fullName>
                </value>
                <value>
                    <fullName>Aguardando encerramento da Inadimplência</fullName>
                </value>
                <value>
                    <fullName>Aguardando Aprovação da Gerência</fullName>
                </value>
                <value>
                    <fullName>Analisando Distrato</fullName>
                </value>
                <value>
                    <fullName>Analisando Inclusão das Parcelas no Financiamento</fullName>
                </value>
                <value>
                    <fullName>Distrato Realizado</fullName>
                </value>
                <value>
                    <fullName>Aguardando tempo para inicio de cobrança</fullName>
                </value>
                <value>
                    <fullName>Pausada</fullName>
                </value>
                <value>
                    <fullName>Encerrada pelo UAU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Etapa_pre_pausa__c</fullName>
        <label>Etapa pré-pausa</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Fase__c</fullName>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amigável</fullName>
                    <default>true</default>
                    <label>Amigável</label>
                </value>
                <value>
                    <fullName>Extrajudicial</fullName>
                </value>
                <value>
                    <fullName>Judicial</fullName>
                </value>
                <value>
                    <fullName>Concluída</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Fim_da_Inadimplencia_Amigavel__c</fullName>
        <label>Fim da Inadimplência Amigável</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Fim_da_Inadimplencia_Extrajudicial__c</fullName>
        <label>Fim da Inadimplência Extrajudicial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Fim_da_Inadimplencia_Judicial__c</fullName>
        <label>Fim da Inadimplência Judicial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Assistencia_Tecnica__c</fullName>
        <label>ID Assistencia Tecnica</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Cartorio__c</fullName>
        <label>ID Cartorio</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Comercial__c</fullName>
        <label>ID Comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Consultor_de_Atendimento__c</fullName>
        <label>ID Consultor de Atendimento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Consultor_de_Relacionamento__c</fullName>
        <label>ID Consultor de Relacionamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Contas_a_Receber__c</fullName>
        <label>ID Contas a Receber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Contratos__c</fullName>
        <label>ID Contratos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Despachante__c</fullName>
        <label>ID Despachante</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Diretoria__c</fullName>
        <label>ID Diretoria</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Engenharia__c</fullName>
        <label>ID Engenharia</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Financeiro__c</fullName>
        <label>ID Financeiro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Gestor_Financeiro__c</fullName>
        <label>ID Gestor Financeiro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Gestor_Relacionamento__c</fullName>
        <label>ID Gestor Relacionamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Jur_dico_Externo__c</fullName>
        <label>ID Jurídico Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Jur_dico_Interno__c</fullName>
        <label>ID Jurídico Interno</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Manuten_o__c</fullName>
        <label>ID Manutenção</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Operador_Financiamento__c</fullName>
        <label>ID Operador Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Qualidade__c</fullName>
        <label>ID Qualidade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Registro_Financiamento__c</fullName>
        <label>ID Registro Financiamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Incio_Inadimplencia_Amigavel__c</fullName>
        <label>Início da Inadimplência Amigável</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Inicio_Fase_Atual__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Inicio Fase Atual</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Inicio_Inadimplencia_Extrajudicial__c</fullName>
        <label>Início da Inadimplência Extrajudicial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Inicio_Inadimplencia_Judicial__c</fullName>
        <label>Início da Inadimplência Judicial</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Maior_Data_Vencimento__c</fullName>
        <label>Maior Data Vencimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Mudar_Responsavel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mudar Responsável</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Aprovacao_Diretoria_Extra__c</fullName>
        <label>Necessita Aprovação da Diretoria Extra?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Necessita_Aprovacao_Diretoria__c</fullName>
        <label>Necessita Aprovação da Diretoria?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Contato__c</fullName>
        <label>Nome do Contato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Parcelas__c</fullName>
        <label>Numero Parcelas Abertas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Vazio__c</fullName>
        <description>Campo criado somente para auxilio de fórmula, não usá-lo para outro objetivo.</description>
        <label>Numero Vazio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Venda__c</fullName>
        <label>Número da Venda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao_Tuteta__c</fullName>
        <label>Observação Tutela</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Observacoes__c</fullName>
        <label>Observações</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Possui_Tutela__c</fullName>
        <label>Possui Tutela</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Não</fullName>
                    <default>true</default>
                    <label>Não</label>
                </value>
                <value>
                    <fullName>Sim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Prioridade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prioridade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Rel_Inadimplencia_Consolidada__c</fullName>
        <formula>IF(ISPICKVAL(TW1_Etapa__c, &quot;Pausada&quot;), &quot;Financiamento&quot;,  TEXT(TW1_Fase__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inadimplência Consolidada</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Resumo_Aprovacao__c</fullName>
        <label>Resumo Aprovação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Retomar_Contato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retomar Contato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Sem_Contato_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sem Contato Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Status_Aprovacao__c</fullName>
        <label>Status Aprovação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_Cobranca__c</fullName>
        <label>Status Cobrança</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promessa de Pagamento a vista</fullName>
                </value>
                <value>
                    <fullName>Solicita renegociação</fullName>
                </value>
                <value>
                    <fullName>Informa permuta de serviço</fullName>
                </value>
                <value>
                    <fullName>Diretoria – suspender cobrança</fullName>
                </value>
                <value>
                    <fullName>Recado</fullName>
                </value>
                <value>
                    <fullName>Aguardando retorno</fullName>
                </value>
                <value>
                    <fullName>Informa ação contra Calçada</fullName>
                </value>
                <value>
                    <fullName>Alega pagamento</fullName>
                </value>
                <value>
                    <fullName>Não consegue contato</fullName>
                </value>
                <value>
                    <fullName>Recusa-se a pagar</fullName>
                </value>
                <value>
                    <fullName>Cobrança indevida (ajustar fluxo)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_Tutela__c</fullName>
        <formula>IF( NOT(ISPICKVAL(TW1_Possui_Tutela__c,&quot;Sim&quot;)), IMAGE(&quot;servlet/servlet.FileDownload?file=0150v00000076CK&quot;, &quot;Não Possui Tutela&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=0150v00000076CZ&quot;, &quot;Possui Tutela&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Tutela</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_Alternativo__c</fullName>
        <label>Telefone Alternativo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone_Comercial__c</fullName>
        <label>Telefone Comercial</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Tempo_Inadimplencia__c</fullName>
        <label>Tempo de Inadimplência</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Total_Dias_Amigavel__c</fullName>
        <label>Total de Dias - Amigável</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Total_Dias_Extrajudicial__c</fullName>
        <label>Total de Dias - Extrajudicial</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Total_Dias_Judicial__c</fullName>
        <label>Total de Dias - Judicial</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Enviada_Aprovacao__c</fullName>
        <label>Tratativa Enviada Aprovação</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Tratativa_Inadimplencia__c</fullName>
        <label>Tratativa da Inadimplência</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TW1_Tratativa_Inadimplencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade_Possui_AF__c</fullName>
        <formula>IF( TEXT(TW1_Unidade__r.TW1_Tipo_Contrato_Definitivo__c)  = &quot;Alienação Fiduciária&quot;,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unidade Possui AF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inadimplências</relationshipLabel>
        <relationshipName>TW1_Inadimplencia_Unidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Principal__c</fullName>
        <label>Valor Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Reajustado__c</fullName>
        <label>Valor Reajustado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inadimplência</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>IN# {YYYY}{MM}{0000}</displayFormat>
        <label>Inadimplência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inadimplências</pluralLabel>
    <recordTypes>
        <fullName>TW1_Amigavel</fullName>
        <active>true</active>
        <label>Amigável</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Extrajudicial</fullName>
        <active>true</active>
        <label>Extrajudicial</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Judicial</fullName>
        <active>true</active>
        <label>Judicial</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ImpedirMudarEtapaFila</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEFT(OwnerId, 3) = &quot;00G&quot;,
ISCHANGED( TW1_Etapa__c )
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>A Etapa não pode ser alterada enquanto o proprietário for uma fila. Atribua o registro a um usuário e depois altere a etapa.</errorMessage>
    </validationRules>
</CustomObject>